--- a/Tugas 4/index.html
+++ b/Tugas 4/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body style="padding: 2%;">
     <div style="container mt-3">
     <div class="row">
         <div class="col-md-3">
