--- a/Tugas 5/index.html
+++ b/Tugas 5/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>API Weather</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+    <link rel="stylesheet" href="style.css">
+  </head>
 
   <body>
     <nav class="navbar navbar-expand-lg" style="background-color: #7cc0f0;">
@@ -38,10 +39,9 @@
 
     <hr>
 
-    <div class="row m-5 result" id="city-list">
+    <div class="row mt-5 result" id="city-list">
         
     </div>
-
 
 
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
